--- a/couscous.yml
+++ b/couscous.yml
@@ -1,5 +1,5 @@
 # Base URL of the published website
-baseUrl: https://orgdocs.marklabs.co
+baseUrl: https://mark-labs.github.io/omarkadmindoc
 
 template:
     url: https://github.com/MARK-Labs/Template-ReadTheDocs
